# OpenCSTL

./: .gitignore  404.html  CMakeLists.txt  LICENSE  OpenCSTL.sln  OpenCSTL.xlsx  README.ko.md  README.md  README.zh.md  README_en.md  README_ko.md  TODO.md  amalgamate.bat  amalgamate.py  bench_parser.c  bench_sort.c  bench_sort2.c  bench_sort_cpp.cpp  cenv.c  check_vector.c  clean.py  example.c  gen.pl  gmp.h  index.html  main.c  mkdocs.yml  opencstl.h  page.html  perftest  perftest.c  requirements.txt  run_bcc64x.bat  run_pocc.bat  sample.json  sample_json.py  settings.json  settings_ansi.json  shuffle.py  sitemap.xml  (+13 more)
.claude/: settings.local.json
.github/workflows/: ci.yaml  deploy.yml
OpenCSTL/: OpenCSTL.vcxproj  OpenCSTL.vcxproj.filters  OpenCSTL.xlsx  a.out  main.c  out.txt
OpenCSTL/OpenCSTL/: OpenCSTL.vcxproj  OpenCSTL.vcxproj.filters  main.c
OpenCSTL/OpenCSTL/Debug/: main.obj.enc
OpenCSTL/OpenCSTL/Debug/OpenCSTL.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OpenCSTL.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
OpenCSTL/OpenCSTL/Release/OpenCSTL.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OpenCSTL.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
OpenCSTL/OpenCSTL/opencstl/: defines.h  deque.h  list.h  opencstl.h  tree.h  types.h  vector.h
OpenCSTL/opencstl/: defines.h  deque.h  error.h  list.h  opencstl.h  tree.h  types.h  vector.h
__deque/: index.html
__list/: index.html
__map/: index.html
__priority_queue/: index.html
__queue/: index.html
__set/: index.html
__stack/: index.html
__unordered_map/: index.html
__unordered_set/: index.html
__vector/: index.html
_containers/: index.html
assets/: .gitignore  opencstl.h  sample01_vector.c  sample01_vector.cpp  sample02_vector.c  sample02_vector.cpp  sample03_list.c  sample03_list.cpp  sample04_stack_queue.c  sample04_stack_queue.cpp  sample05_deque.c  sample05_deque.cpp  sample06_map.c  sample06_map.cpp  sample07_priority_queue.c  sample07_priority_queue.cpp  sample08_bitset.c  sample08_bitset.cpp
assets/codes/: hconcat.py  png2webp.py
bench/bench_sort/: .gitignore  CMakeLists.txt  QSORT.md  RESULTS.md  bench  crossplatform.h  isort.h  main.c  msort.h  pdq_sort.h  pdqsort.h  pmsort.h  pthread_cc.h  rsort.h  tsort.h
docs/: README.md  __deque.md  __list.md  __map.md  __priority_queue.md  __queue.md  __set.md  __stack.md  __unordered_map.md  __unordered_set.md  __vector.md  _containers.md  examples.html  index.html  other-libraries.html  style.css
docs/reference/: deque.html  list.html  map.html  queue.html  set.html  stack.html  unordered_map.html  unordered_set.html  vector.html
examples/: .gitignore  download.py  example_01.c  example_01.cpp  example_02.c  example_02.cpp  example_03.c  example_03.cpp  example_04.c  example_04.cpp  example_05.c  example_05.cpp  example_06.c  example_06.cpp  example_basic_01.c  perftest.c
helper/: focus.py  generaet_memcmp_n.py  generate_faker.py  generate_linux_macro_ds.py  generate_linux_macro_sort.py  sample.json  sample_json.py  test_json.py  test_random.py  version_ocr.py  viz_vector2.py  write_title.py
helper/sample/: log_test.py  sample_20_string.py
img/: OpenCSTL.ai
opencstl/: algorithm.h  array.h  bestsort.h  bitset.h  c_alloca.h  c_random.h  chrono.h  cio.h  compare.h  compiler.h  crossplatform.h  cstl.h  cstl_alloca.h  cstl_compare.h  cstl_file.h  cstl_msort.h  cstl_random.h  cstl_time.h  cstl_version.h  csv.h  defines.h  deque.h  error.h  file.h  fileio.h  filesystem.h  fstream.h  galloc.h  glob.h  hashtable.h  hashtable_v1.h  hashtable_v2.h  ipnsort.h  isort.h  iterator.h  json.h  list.h  logging.h  lprint.h  memcmps.h  (+34 more)
opencstl/dev/: hash.c
search/: search_index.json
test/: .gitignore  OpenCSTL.sln  OpenCSTL.vcxproj  OpenCSTL.vcxproj.filters  OpenCSTL.xlsx  a.out  check.c  generate_linux_macro.pl  generate_linux_macro_algo.pl  main.c  out.txt  print.h  test01.c  test02.c  test03.c  test_glob.c  test_json.c  test_tqdm.c  write_message.py
tests/: run_semgrep.cmd  semgrep.yml  test_deque_algorithm.c
